istio/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: development
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE 

---

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: cassandra
spec:
  mtls:
    #mode: STRICT
    mode: DISABLE
