istio/envoyfilter_addprofile.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-profile
  namespace: oauth2
spec:
  workloadSelector:
    labels:
      app: oauth2-proxy
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.lua
        typed_config:
          "@type": "type.googleapis.com/envoy.config.filter.http.lua.v2.Lua"
          inlineCode: |
            function envoy_on_response(response_handle)
              
              local body = response_handle:body()
              local jsonString = tostring(body:getBytes(0, body:length()))
              response_handle:logWarn("response_handle SIDECAR_INBOUND: "..jsonString)
              
              local user_info_table=load("return "..jsonString:gsub('("[^"]-"):','[%1]='))()

              for header, value in pairs(user_info_table) do
                response_handle:headers():add("x-oauth2-proxy-response-"..header, value)
              end

            end
